# inaina

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.deploy  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.deploy/: docker-compose.yml  init.sh
.deploy/envs/: local.env  production.env
.deploy/gunicorn/: local.py  production.py
.deploy/nginx/: cert.nginx  local.nginx  production.nginx
.requirements/: base.txt  dev.txt  production.txt
app/: pytest.ini
app/config/: __init__.py  context_processors.py  models.py  storages.py  urls.py  views.py
app/config/settings/: __init__.py  base.py  develop.py  local.py  production.py
app/config/utils/: datetime.py  paginator.py
app/config/wsgi/: local.py  production.py
app/jina/: admin.py  apps.py  models.py  urls.py  views.py
app/jina/migrations/: 0001_initial.py  0002_jinapost_user.py  0003_auto_20170812_0122.py  0004_auto_20190630_0746.py
app/member/: models.py
app/member/migrations/: 0001_initial.py  0002_auto_20190630_0746.py  0003_alter_user_first_name.py
app/mina/: admin.py  apis.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/mina/migrations/: 0001_initial.py  0002_auto_20170812_0122.py  0003_auto_20190630_0746.py
app/notice/: models.py
app/notice/migrations/: 0001_initial.py
app/photos/: admin.py  models.py  urls.py  views.py
app/photos/migrations/: 0001_initial.py  0002_auto_20210514_1747.py  0003_auto_20210518_1533.py  0004_photopost_date_color.py
app/static/css/: _var.sass  base.css  base.css.map  base.sass  base.scss  header.css  header.css.map  header.sass  index.css  index.css.map  index.sass  index.scss  photo_post.css  photo_post.css.map  photo_post.scss  photo_posts.css  photo_posts.css.map  photo_posts.scss  photo_thumbnails.css  photo_thumbnails.css.map  photo_thumbnails.scss  post.css  post.css.map  post.sass
app/static/sources/: inaina.css
app/templates/common/: about.html  base.html  (+1 more)
app/utils/: secrets.py  viewsets.py
(+6 files in other folders)
