[tool.poetry]
name = "inaina"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "stable"
boto3 = "^1.10.14"
django = "<3"
django-dbbackup = "<3.2"
django-extensions = "^2.2.5"
django-storages = "^1.7.2"
django-secrets-manager = "^0.1.13"
gunicorn = "^20.0.4"
pillow = "^6.2.1"
psycopg2-binary = "^2.8.4"
sentry-sdk = "<2"
django-sslserver = "^0.22"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
notebook = "^6.0.2"

[tool.black]
line-length = 130

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
