[tool.poetry]
name = "inaina"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "<2"
django = "^3"
django-dbbackup = "^3"
django-extensions = "<3"
django-quill-editor = "^0.1.22"
django-storages = "<2"
gunicorn = "<21"
pillow = "^8"
psycopg2-binary = "<3"
sentry-sdk = "<2"
django-colorfield = "^0.4.1"
black = "^21.5b2"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
model-bakery = "^1.3.1"
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "<4"
notebook = "<7"

[tool.black]
line-length = 130

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
